# ai_french_coach

./: .gitignore  README.md
backend/: main.py  main_demo.py  pyproject.toml  requirements.txt  schema.py
backend/ai/: assessment_scorer.py  chat_handler.py  lesson_generator.py  prompt_builder.py  transcriber.py
backend/api/: assessment.py  auth.py  chat.py  conversation.py  languages.py  lessons.py  pairs.py  progress.py  reception.py  vocabulary.py
backend/data/: app.db
backend/database/: __init__.py  config.py  connection.py  import_lessons.py  lesson_loader.py  migrate_lessons.py  migrations.py  schema.py  seed.py  serializers.py  ts_export_extractor.mjs  verify_lessons_import.py  view.py
backend/database/migrations/: 001_assessment_questions.sql  002_assessment_feedback.sql  __init__.py
backend/middleware/: rate_limit.py
backend/models/: __init__.py  assessment.py  auth.py  base.py  chat.py  languages.py  lesson.py  pairs.py  progress.py  user.py  vocabulary.py
backend/repositories/: __init__.py  user_repository.py
backend/scripts/: __init__.py  init_db.py  migrate_db.py  migrate_lessons.py  reset_db.py  seed_db.py  verify_lessons_import.py
backend/services/: __init__.py  assessment_service.py  auth_service.py  chat_service.py  languages_service.py  lesson_service.py  pairs_service.py  progress_service.py  transcription_service.py  user_service.py  vocabulary_service.py
backend/tests/: test_assessment_scorer.py  test_prompt_builder.py  test_rate_limit.py  test_vocabulary_service.py
backend/utils/: __init__.py  exceptions.py  logger.py
(+317 files in other folders)
