[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "ffmpeg>=1.4",
    "ffprobe>=0.5",
    "langdetect>=1.0.9",
    "openai>=2.30.0",
    "openapi>=2.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "uvicorn>=0.42.0",
]
